--- a/src/DayXX.tmpl
+++ b/src/DayXX.tmpl
@@ -12,6 +12,8 @@ import Text.ParserCombinators.ReadP as P
 import Numeric (readInt)
 import Data.Bits ((.&.), (.|.))
 
+import Debug.Trace (trace)
+
 import Lib
 
 
